--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="searchTitle">Search artwork</string>
     <string name="favorites">Favorites</string>
     <string name="signout">sign out</string>
-
+    <string name="loginInfo">email@email.com</string>
 
 </resources>
