--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="favorites">Favorites</string>
     <string name="signout">sign out</string>
     <string name="loginInfo">email@email.com</string>
+    <string name="description">click on item for more info</string>
+
 
 </resources>
